--- a/Farkle/Farkle.vcxproj
+++ b/Farkle/Farkle.vcxproj
@@ -158,6 +158,9 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="Turn.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="FarkleRules.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
